feat: add world manipulation